feat(description): add description crud in team and tests junit (#1134)
* feat(description): add description crud in team and tests junit

* feat(description): add description crud in team and tests junit

* feat(description-team): script db add column description

* feat(description-team): correction error naming column

* feat(description-team): test karate change

* feat(description-team): modif tests

* feat(description-team): modif karate tes